# taq

./: .gitignore  LICENSE  README.md  pyproject.toml
taq/: main.py
