[tool.poetry]
name = "taq"
version = "0.1.0"
description = "Backend for queueing system for TA help."
authors = ["orbit-stabilizer <orbit-stabilizer.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.54.1"
uvicorn = "^0.11.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pre-commit = "^2.3.0"

[tool.black]
line.length = 99
skip-string-normalization = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

